--- a/test.config
+++ b/test.config
@@ -19,7 +19,7 @@
 # those that follow.  The defaults only apply to options that have not been
 # explicitly set.  Options that appear multiple times keep the first value set,
 # unless they are a multivalue option such as IdentityFile.
-Include /etc/ssh/ssh_config.d/*
+# Include /etc/ssh/ssh_config.d/*
 
 # Site-wide defaults for some commonly used options.  For a comprehensive
 # list of available options, their meanings and defaults, please see the
@@ -52,5 +52,5 @@ Include /etc/ssh/ssh_config.d/*
 #   ProxyCommand ssh -q -W %h:%p gateway.example.com
 #   RekeyLimit 1G 1h
 #   UserKnownHostsFile ~/.ssh/known_hosts.d/%k
-Host *
-    SendEnv LANG LC_*
+#Host *
+#    SendEnv LANG LC_*
